@startuml
/'
デフォルトのスタイルを設定します。
この場合の指定は class です。entity ではエラーになります。
'/
skinparam class {
    BackgroundColor METAL
    BorderColor Black
    ArrowColor Black
}

entity "users" as users {
    + id [PK]
    --
    provider
    uid
    name
    mail
    created_at
    updated_at
}

entity "user_self_introductions" as user_self_introductions {
    + id   [PK]
    --
    # user_id [FK]
    birth_place
    birth_month
    birth_day
    hobby
    introduction
    created_at
    updated_at
}

entity "user_divisions" as user_divisions {
    + id   [PK]
    --
    # user_self_introduction_id [FK]
    # division_id [FK]
    created_at
    updated_at
}

entity "departments" as departments {
    + id [PK]
    --
    name
    created_at
    updated_at
}

entity "divisions" as divisions {
    + id [PK]
    --
    # department_id [FK]
    name
    created_at
    updated_at
}

entity "skills" as skills {
    + id [PK]
    --
    # skill_category_id [FK]
    name
    created_at
    updated_at
}

entity "skill_categories" as skill_categories {
    + id [PK]
    --
    name
    created_at
    updated_at
}

entity "user_skills" as user_skills {
    + id   [PK]
    --
    # user_self_introduction_id [FK]
    # skill_id [FK]
    created_at
    updated_at
}

entity "user_careers" as user_careers {
    + id   [PK]
    --
    # user_self_introduction_id [FK]
    # project_id [FK]
    start_at
    end_at
    created_at
    updated_at
}

entity "projects" as projects {
    + id   [PK]
    --
    name
    description
    created_at
    updated_at
}

entity "project_skills" as project_skills {
    + id   [PK]
    --
    # project_id [FK]
    # skill_id [FK]
    created_at
    updated_at
}

users ||--right--o| user_self_introductions
user_self_introductions ||--o{ user_divisions
user_self_introductions ||--o{ user_skills
user_self_introductions ||--o{ user_careers
user_divisions }o--o{ divisions
departments ||--o{ divisions
skills }o--o{ skill_categories
user_skills }o--o{ skills
projects }o--o{ project_skills
project_skills }o--o{ skills
user_careers ||--o{ projects

@enduml